proofs/phase3_pressure_run.log
[1/4] Build host daemon
src/main.c: In function ‘main’:
src/main.c:67:22: error: ‘PATH_MAX’ undeclared (first use in this function)
   67 |     char qmp_default[PATH_MAX];
      |                      ^~~~~~~~
src/main.c:67:22: note: each undeclared identifier is reported only once for each function it appears in
src/main.c:67:10: warning: unused variable ‘qmp_default’ [-Wunused-variable]
   67 |     char qmp_default[PATH_MAX];
      |          ^~~~~~~~~~~
make: *** [<builtin>: src/main.o] Error 1
